created sidebar in management

--- a/core/src/main/resources/static/css/position.css
+++ b/core/src/main/resources/static/css/position.css
@@ -11,5 +11,10 @@ body {
 .main-content {
     flex: 1 0 auto;
     padding-top: 54px;
-    padding-left: 20px;
+    padding-left: 277px;
+}
+@media screen and (max-width: 1152px){
+    .main-content {
+        padding-left: 60px;
+    }
 }
