--- a/core/src/main/resources/templates/core/management_habit_shopping_list_item.html
+++ b/core/src/main/resources/templates/core/management_habit_shopping_list_item.html
@@ -26,13 +26,10 @@
 </head>
 <body>
 <div id="header" th:insert="core/header"></div>
+<div id="sidebar" th:insert="core/sidepanel"></div>
 <div class="main-content">
     <div class="container-xl">
-
             <div class="row" id="shopping-list-admin-page" style="margin: auto">
-                <div>
-                    <div id="sidebar" th:insert="core/sidebar"></div>
-                </div>
                 <div id="tab-content" style="padding-left: 5%; padding-right: 5%; width: 100%">
                     <div class="row" >
                         <div class="col-sm-12">
