--- a/core/src/main/resources/templates/core/header.html
+++ b/core/src/main/resources/templates/core/header.html
@@ -31,6 +31,7 @@
                     <div class="dropdown-content">
                         <a onclick="setLanguageUa()">Ua</a>
                         <a onclick="setLanguageEn()">En</a>
+                        <a onclick="setLanguageRu()">Ru</a>
                     </div>
                 </div>
             </div>
