--- a/core/src/main/resources/templates/core/index.html
+++ b/core/src/main/resources/templates/core/index.html
@@ -24,10 +24,12 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <script th:src="@{/management/localization/buttonsAJAX.js}"></script>
+    </script>
 </head>
 
 <body>
     <div id="header" th:insert="core/header"></div>
+    <div id="sidebar" th:insert="core/sidepanel"></div>
 <div class="main-content">
     <h2>[[#{greenCity.index.page.h}]]</h2>
 </div>
