--- a/core/src/main/resources/templates/core/management_user_habits.html
+++ b/core/src/main/resources/templates/core/management_user_habits.html
@@ -23,12 +23,15 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" th:href="@{/management/css/table_Modal_Pagination.css}">
+    <link rel="stylesheet" th:href="@{/management/css/sidebar.css}">
     <script th:src="@{/management/habits/buttonsAJAX.js}"></script>
     <script th:src="@{/management/localization/buttonsAJAX.js}"></script>
+
 </head>
 
 <body>
 <div id="header" th:insert="core/header"></div>
+<div id="sidebar" th:insert="core/sidepanel"></div>
 <div class="main-content">
     <div class="container-xl">
         <div class="table-responsive">
@@ -87,7 +90,7 @@
                             </td>
                             <td th:text="${habit.id}"></td>
                             <td>
-                                <img th:src="${habit.image}" th:width="120" th:height="100">
+                                <img th:src="${habit.image}" th:width="47" th:height="34">
                             </td>
                             <td>
                                 <table class="table table-borderless m-0">
