deleted ru language

--- a/core/src/main/resources/templates/core/sidepanel.html
+++ b/core/src/main/resources/templates/core/sidepanel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Вертикальное меню</title>
+    <title>Sidebar</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" th:href="@{/css/sidebar.css}">
     <script defer type="text/javascript" th:src="@{/management/sidebar/sidebar.js}"></script>
